# tuiz

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: domain.py  domian.py  identifiers.py  main.py
src/tuitor/: __main__.py  domain.py  identifiers.py
src/tuiz/: __main__.py  domain.py  identifiers.py
tests/: test_domain.py
