[project]
name = "tuiz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
#----------------------
# TODO: Those lines are copy-pasted from the Claude Code. They let me use `uv run tuix`
#       But I don't fully understand them. Please learn what they do!
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tuiz"]

[project.scripts]
tuiz = "tuiz.__main__:main"
#----------------------

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
